Fix embedded player after Ramp rework
Either the Video.js upgrade or other reworking of Ramp broke certain
features of the embedded player. This work:
1. Fixes the "View in Repository" button so that the icon renders and
   button instances are not continuously added.
2. Fixes behavior so the quality selector is not present on audio items.
3. Hides tooltips/menues that render above the media player. These get
   cut off by the iframe and are unusable.
4. Removes the playback rate option from embedded audio player

--- a/app/javascript/components/embeds/Ramp.scss
+++ b/app/javascript/components/embeds/Ramp.scss
@@ -22,6 +22,14 @@
   .video-js .vjs-big-play-button {
     left: 55% !important;
   }
+  .video-js.vjs-audio-only-mode {
+    // Disable tooltips for volume and progress in embedded
+    // audio. Viewport is too small to display them.
+    .vjs-volume-panel:hover .vjs-mouse-display,
+    .vjs-custom-progress-bar .tooltiptext {
+      display: none !important;
+    }
+  }
   @media (max-width: 585px) {
     .video-js .vjs-big-play-button {
       scale: 1.5;
